--- a/roles/cicd/tasks/main.yml
+++ b/roles/cicd/tasks/main.yml
@@ -11,9 +11,13 @@
       get_url: 
           url: http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo
           dest: /etc/yum.repos.d/jenkins.repo
+    - name: import jenkins key
+      rpm_key:
+       state: present
+       key: https://jenkins-ci.org/redhat/jenkins-ci.org.key
 
-    - name: import GPG key
-      rpm_key: key=https://jenkins-ci.org/redhat/jenkins-ci.org.key state=present
+    #- name: import GPG key
+    #  rpm_key: key=https://jenkins-ci.org/redhat/jenkins-ci.org.key state=present
  
     #- name: import GPG key
     #  rpm_key: key=https://pkg.jenkins.io/redhat-stable/jenkins.io.key state=present
