--- a/roles/cicd/tasks/main.yml
+++ b/roles/cicd/tasks/main.yml
@@ -15,7 +15,7 @@
       rpm_key:
        state: present
        key: https://jenkins-ci.org/redhat/jenkins-ci.org.key
-       sudo: yes
+       become: sudo
 
     #- name: import GPG key
     #  rpm_key: key=https://jenkins-ci.org/redhat/jenkins-ci.org.key state=present
