--- a/roles/cicd/tasks/main.yml
+++ b/roles/cicd/tasks/main.yml
@@ -1,9 +1,4 @@
 ---
-#- name: This playbook is for Jenkins installation and set up
-#  hosts: cicdserver
-#  become: true
-#  gather_facts: false
-#  tasks:
     - name: install openjdk
       yum: name=java-1.8.0-openjdk-devel state=present
   
@@ -11,17 +6,10 @@
       get_url: 
           url: http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo
           dest: /etc/yum.repos.d/jenkins.repo
-    - name: import jenkins key
-      rpm_key:
-       state: present
-       key: https://jenkins-ci.org/redhat/jenkins-ci.org.key
-      become: true
-
-    #- name: import GPG key
-    #  rpm_key: key=https://jenkins-ci.org/redhat/jenkins-ci.org.key state=present
  
-    #- name: import GPG key
-    #  rpm_key: key=https://pkg.jenkins.io/redhat-stable/jenkins.io.key state=present
+    - name: import GPG key
+      rpm_key: key=https://pkg.jenkins.io/redhat-stable/jenkins.io.key state=present
+      
     - name: install Jenkins server
       yum: name=jenkins state=present
 
