--- a/roles/cicd/tasks/main.yml
+++ b/roles/cicd/tasks/main.yml
@@ -8,7 +8,7 @@
           dest: /etc/yum.repos.d/jenkins.repo
  
     - name: import GPG key
-      rpm_key: key=https://pkg.jenkins.io/redhat-stable/jenkins.io.key state=present
+      ansible.builtin.rpm_key: key=https://pkg.jenkins.io/redhat-stable/jenkins.io.key state=present
       
     - name: install Jenkins server
       yum: name=jenkins state=present
